Crappy stopgap change to make code examples less broken.

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -164,7 +164,6 @@ body.example {
 
 .cr-pattern-library-code-example {
   border: 0;
-  width: 100%;
 }
 
 .docs-example {
@@ -256,9 +255,4 @@ body.example {
   width: 6rem;
   height: 6rem;
   border-radius: .25rem;
-}
-
-
-.quaaack {
-  display: block;
 }
